# ood-testing

./: LICENSE  README.md  pyproject.toml
datasets/partitions/electricity/: source.csv  target.csv
datasets/partitions/electricity_small/: source.csv  target.csv
datasets/partitions/synt/: source.csv  target.csv
experiments/: ood_pipeline_example.ipynb  run_dataset.py  toy_example.py
experiments/configs/: test_dataset.yaml
oodt/data/: base.py  loaders.py  preprocessing.py
oodt/metrics/: metrics.py
oodt/pipelines/: pipeline_builder.py
oodt/shifts/: base.py  batch.py
oodt/shifts/concept/: feature_stratification.py  mf_kmeans.py
oodt/shifts/label/: new_class.py
oodt/splitting/: splitter.py
oodt/utils/: utils.py
tests/data/: test_dataset.py
tests/shifts/concept/: test_feature_stratification.py
tests/shifts/label/: test_new_class.py
tests/splitter/: test_splitter.py
